Fix scrollbar CSS

--- a/resources/assets/sass/helpers/_side_panels.scss
+++ b/resources/assets/sass/helpers/_side_panels.scss
@@ -32,9 +32,10 @@
     width: 100%;
     height: 100%;
 
-    div:nth-child(2) {
+    > div:nth-child(2) {
       max-height: 100%;
-      overflow:scroll;
+      overflow-x:hidden;
+      overflow-y:auto;
       flex-grow:2;
     }
   }
